# Brain2

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  skills-lock.json
backend/: ARCHITECTURE.md  pyproject.toml
backend/src/brain2/: config.py  deps.py  main.py
backend/src/brain2/api/: auth.py  entries.py  settings_tokens.py
backend/src/brain2/auth/: api_keys.py  bearer.py  deps.py  jwt_service.py  oauth_clients.py  oauth_codes.py  refresh_tokens.py  schema.sql  store.py  users.py
backend/src/brain2/db/: connection.py  migrations.py  schema.sql
backend/src/brain2/mcp/: __init__.py  auth.py  server.py  tools.py
backend/src/brain2/models/: auth.py  entries.py
backend/src/brain2/services/: canonicalize.py  (+16 more)
backend/tests/: conftest.py  test_agent_tags.py  test_api_keys.py  test_auth_api.py  test_auth_store.py  test_auth_users.py  test_bearer.py  test_canonicalize.py  test_canonicalize_normalize.py  test_config.py  test_connection.py  test_content.py  test_delete.py  test_embedder.py  test_entries_api.py  test_entries_auth.py  test_fts_sync.py  test_gemini_smoke.py  test_get_tags.py  test_hybrid_search.py  test_identity_provider.py  test_jwt_service.py  test_list.py  test_mcp.py  test_mcp_transport.py  test_note_resolver.py  test_oauth_codes.py  test_oauth_dcr_refresh.py  test_providers_factory.py  test_providers_http.py  test_repair.py  test_repair_api.py  test_search.py  test_settings_tokens_api.py  test_structured_tags.py  test_tagger.py  test_tagging.py  test_url_normalize.py  test_vector.py  test_worker.py  (+3 more)
(+147 files in other folders)
