[project]
name = "brain2"
version = "0.1.0"
description = "Brain2 backend: per-user SQLite memory store with FastAPI."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.3",
    "nanoid>=2.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlite-vec>=0.1.9",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
